--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.yo1000</groupId>
 	<artifactId>whisker</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.1.BETA</version>
 	<packaging>jar</packaging>
 
 	<name>whisker</name>
