--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 spring:
   thymeleaf:
     cache: true
-
-  # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
   datasource:
     driver-class-name:  org.h2.Driver
     url:                jdbc:h2:file:${application.data.file}
@@ -31,10 +29,13 @@ application:
       extensions: ".java, .groovy"
       filter: ".*"
     git:
-      comment-regex: ".*(Fix|Bug).*"
+      comment-regex: ".*"
   chart:
-    xaxis: "Refactoring cost"
-    yaxis: "Service impact"
+    xaxis: "Refactoring cost (complexity)"
+    yaxis: "Service impact (additions & deletions)"
+    tooltip:
+      xaxis: "Refactoring cost"
+      yaxis: "Service impact"
 
   data:
     file: ./whisker.datastore
